unified phdutility. compilation checked. to do: test results

--- a/sources/Definitions/CMakeLists.txt
+++ b/sources/Definitions/CMakeLists.txt
@@ -9,10 +9,7 @@ add_library(Definitions STATIC ${DEF_SOURCES})
 
 target_include_directories(Definitions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-find_package(SymbolicOperators REQUIRED)
-target_include_directories(Definitions PUBLIC ${SymbolicOperators_INCLUDE_DIRS})
-target_link_libraries(Definitions PUBLIC SymbolicOperators::SymbolicOperators)
+find_package(mrock REQUIRED)
 
-find_package(Utility REQUIRED)
-target_include_directories(Definitions PUBLIC ${Utility_INCLUDE_DIRS})
-target_link_libraries(Definitions PUBLIC Utility::Utility)
+target_include_directories(Definitions PUBLIC ${mrock_INCLUDE_DIRS})
+target_link_libraries(Definitions PUBLIC ${mrock_LIBRARIES})
